add multiple random oscilators with random periodic waves

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 
     <body>
 
-        <button>play</button>
-
-        <canvas id="oscilloscope" width="100%" height="50%"></canvas>
+        <button>add random oscilator</button>
 
     </body>
 
