add/remove/modify

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
     <head>
         <link rel="stylesheet" href="index.css">
         <script src="index.js"></script>
-        <script src="perlin.js"></script>
     </head>
 
     <body>
 
-        <button>add random oscilator</button>
+        <div class="flex-rows padding gap">
+
+            <div class="warning padding">
+                ⚠
+                <br />
+                WARNING
+                <br />
+                LOWER YOUR VOLUME
+                <br />
+                PLAYING WITH THIS FOR TOO LONG CAN CAUSE HEADACHES
+            </div>            
+
+            <div id="oscilloscopes">
+                <button id="add-oscilloscope">ADD OSCILLOSCOPE</button>
+            </div>
+
+        </div>
+
 
     </body>
 
