fix warning message size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="flex-rows padding gap">
 
-            <div class="warning padding grow">
+            <div class="warning padding grow width100">
                 ⚠
                 <br />
                 WARNING
