fix message box size

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
     <body>
 
-        <div class="flex-rows padding gap">
+        <div class="flex-rows padding gap stretch">
 
-            <div class="warning padding grow width100">
+            <div class="warning padding grow">
                 ⚠
                 <br />
                 WARNING
